--- a/src/app/shared/components/curso-list/curso-list.component.html
+++ b/src/app/shared/components/curso-list/curso-list.component.html
@@ -1,9 +1,11 @@
 <div class="tabla-container">
+  <!-- Filtro -->
   <mat-form-field appearance="outline" class="filtro">
     <mat-label>Filtrar cursos</mat-label>
     <input matInput (keyup)="aplicarFiltro($event)" placeholder="Buscar por nombre o código" />
   </mat-form-field>
 
+  <!-- Tabla de cursos -->
   <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
 
     <!-- Código -->
@@ -34,7 +36,7 @@
     <ng-container matColumnDef="estado">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado</th>
       <td mat-cell *matCellDef="let curso">
-        <span [ngClass]="curso.estado.toLowerCase()">{{ curso.estado }}</span>
+        <span [ngClass]="curso.estado.toLowerCase().replace(' ', '-')">{{ curso.estado }}</span>
       </td>
     </ng-container>
 
@@ -50,10 +52,11 @@
       </td>
     </ng-container>
 
-    <!-- Render rows -->
+    <!-- Filas -->
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 
+  <!-- Paginador -->
   <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 </div>
