--- a/src/app/shared/components/seguimiento-list/seguimiento-list.component.html
+++ b/src/app/shared/components/seguimiento-list/seguimiento-list.component.html
@@ -1,31 +1,29 @@
-<table mat-table [dataSource]="seguimiento" class="mat-elevation-z8 seguimiento-table">
+<table mat-table [dataSource]="seguimiento" class="mat-elevation-z8">
 
   <!-- Fecha -->
   <ng-container matColumnDef="fecha">
-    <th mat-header-cell *matHeaderCellDef> Fecha </th>
-    <td mat-cell *matCellDef="let element"> {{ element.fecha | date:'short' }} </td>
+    <th mat-header-cell *matHeaderCellDef>Fecha</th>
+    <td mat-cell *matCellDef="let row">{{ row.fecha | date:'shortDate' }}</td>
   </ng-container>
 
   <!-- Estado -->
   <ng-container matColumnDef="estado">
-    <th mat-header-cell *matHeaderCellDef> Estado </th>
-    <td mat-cell *matCellDef="let element">
-      <span [ngClass]="{
-        'pendiente': element.estado === 'pendiente',
-        'aprobada': element.estado === 'aprobada',
-        'rechazada': element.estado === 'rechazada'
-      }">
-        {{ element.estado | titlecase }}
-      </span>
+    <th mat-header-cell *matHeaderCellDef>Estado</th>
+    <td mat-cell *matCellDef="let row">
+      <mat-icon [style.color]="getEstadoColor(row.estado)">
+        {{ getEstadoIcon(row.estado) }}
+      </mat-icon>
+      {{ row.estado | titlecase }}
     </td>
   </ng-container>
 
   <!-- Comentario -->
   <ng-container matColumnDef="comentario">
-    <th mat-header-cell *matHeaderCellDef> Comentario </th>
-    <td mat-cell *matCellDef="let element"> {{ element.comentario || 'N/A' }} </td>
+    <th mat-header-cell *matHeaderCellDef>Comentario</th>
+    <td mat-cell *matCellDef="let row">{{ row.comentario || '-' }}</td>
   </ng-container>
 
+  <!-- Filas -->
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
