--- a/src/app/shared/components/solicitud-form/solicitud-form.component.html
+++ b/src/app/shared/components/solicitud-form/solicitud-form.component.html
@@ -1,46 +1,49 @@
-<div class="solicitud-form">
-  <form [formGroup]="form" class="form-container">
-    <ng-container *ngFor="let field of fields">
-      <!-- Campo de texto -->
-      <mat-form-field *ngIf="field.type === 'text'" appearance="outline" class="full-width">
+<form [formGroup]="form" (ngSubmit)="onSubmit()" class="solicitud-form">
+
+  <div *ngFor="let field of fields" class="form-field">
+    <ng-container [ngSwitch]="field.type">
+
+      <!-- Campo de texto / número -->
+      <mat-form-field *ngSwitchCase="'text'" appearance="outline" class="full-width">
         <mat-label>{{ field.label }}</mat-label>
-        <input matInput [formControlName]="field.name" [readonly]="field.readonly || !editable" />
+        <input matInput [formControlName]="field.name" [readonly]="field.readonly" type="text" />
       </mat-form-field>
 
-      <!-- Campo numérico -->
-      <mat-form-field *ngIf="field.type === 'number'" appearance="outline" class="full-width">
+      <mat-form-field *ngSwitchCase="'number'" appearance="outline" class="full-width">
         <mat-label>{{ field.label }}</mat-label>
-        <input matInput type="number" [formControlName]="field.name" [readonly]="field.readonly || !editable" />
+        <input matInput [formControlName]="field.name" [readonly]="field.readonly" type="number" />
       </mat-form-field>
 
-      <!-- Selector -->
-      <mat-form-field *ngIf="field.type === 'select'" appearance="outline" class="full-width">
+      <!-- Campo select -->
+      <mat-form-field *ngSwitchCase="'select'" appearance="outline" class="full-width">
         <mat-label>{{ field.label }}</mat-label>
-        <mat-select [formControlName]="field.name" [disabled]="field.readonly || !editable">
-          <mat-option *ngFor="let opt of field.options ?? []" [value]="opt">{{ opt }}</mat-option>
+        <mat-select [formControlName]="field.name">
+          <mat-option *ngFor="let opt of field.options" [value]="opt">
+            {{ opt }}
+          </mat-option>
         </mat-select>
       </mat-form-field>
 
-      <!-- Fecha -->
-      <mat-form-field *ngIf="field.type === 'date'" appearance="outline" class="full-width">
+      <!-- Campo fecha -->
+      <mat-form-field *ngSwitchCase="'date'" appearance="outline" class="full-width">
         <mat-label>{{ field.label }}</mat-label>
-        <input matInput [matDatepicker]="picker" [formControlName]="field.name" [readonly]="field.readonly || !editable" />
-        <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+        <input matInput [matDatepicker]="picker" [formControlName]="field.name" />
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
       </mat-form-field>
 
-      <!-- Archivo -->
-      <div *ngIf="field.type === 'file'" class="file-field">
+      <!-- Campo archivo -->
+      <div *ngSwitchCase="'file'" class="file-input">
         <label>{{ field.label }}</label>
-        <input type="file" (change)="onFileSelected($event, field.name)" [disabled]="field.readonly || !editable" />
+        <input type="file" (change)="onFileSelected($event, field.name)" [disabled]="field.readonly" />
       </div>
-    </ng-container>
 
-    <!-- Botón de guardar -->
-    <div class="actions" *ngIf="editable">
-      <button mat-flat-button color="primary" (click)="onSubmit()" [disabled]="form.invalid">
-        Guardar
-      </button>
-    </div>
-  </form>
-</div>
+    </ng-container>
+  </div>
+
+  <!-- Botón enviar -->
+  <button mat-raised-button color="primary" type="submit" [disabled]="form.invalid || !editable">
+    Enviar
+  </button>
+
+</form>
