--- a/src/app/shared/components/required-docs/required-docs.component.html
+++ b/src/app/shared/components/required-docs/required-docs.component.html
@@ -4,18 +4,29 @@
     <p class="info-text">Adjunta los siguientes documentos en formato PDF:</p>
 
     <ul class="required-list">
-      <li *ngFor="let file of requiredFiles"
-          [ngClass]="isUploaded(file) ? 'success' : 'pending'">
-
+      <!-- Archivos obligatorios/opcionales -->
+      <li *ngFor="let doc of requiredFiles"
+          [ngClass]="isUploaded(doc.label) ? 'success' : 'pending'">
         <mat-icon
           [ngClass]="{
-            'icon-success': isUploaded(file),
-            'icon-pending': !isUploaded(file)
+            'icon-success': isUploaded(doc.label),
+            'icon-pending': !isUploaded(doc.label)
           }">
-          {{ isUploaded(file) ? 'check_circle' : 'cancel' }}
+          {{ isUploaded(doc.label) ? 'check_circle' : 'cancel' }}
         </mat-icon>
+        {{ doc.label }} <span *ngIf="doc.obligatorio">*</span>
+      </li>
 
-        {{ file }}
+      <!-- Archivos exclusivos -->
+      <li *ngIf="exclusiveFiles.length">
+        <mat-icon
+          [ngClass]="{
+            'icon-success': exclusiveUploaded(),
+            'icon-pending': !exclusiveUploaded()
+          }">
+          {{ exclusiveUploaded() ? 'check_circle' : 'cancel' }}
+        </mat-icon>
+        {{ exclusiveFiles.join(' o ') }} <span class="nota">(solo uno)</span>
       </li>
     </ul>
   </mat-card-content>
