feat: Añadir funcionalidad para gestionar comentarios en solicitudes de homologación, incluyendo la visualización y adición de comentarios, así como mejoras en la interfaz de usuario y la lógica de aprobación/rechazo.

--- a/src/app/pages/estudiante/homologacion-asignaturas/homologacion-asignaturas.component.html
+++ b/src/app/pages/estudiante/homologacion-asignaturas/homologacion-asignaturas.component.html
@@ -53,7 +53,10 @@
 
       <app-request-status-table
         *ngIf="solicitudes.length > 0"
-        [solicitudes]="solicitudes">
+        [solicitudes]="solicitudes"
+        [showOficio]="false"
+        [showComentarios]="true"
+        (verComentarios)="verComentarios($event)">
       </app-request-status-table>
     </mat-card-content>
   </mat-card>
