--- a/src/app/pages/funcionario/homologacion-asignaturas/homologacion-asignaturas.component.html
+++ b/src/app/pages/funcionario/homologacion-asignaturas/homologacion-asignaturas.component.html
@@ -75,10 +75,16 @@
           <ng-container matColumnDef="acciones">
             <th mat-header-cell *matHeaderCellDef>Acciones</th>
             <td mat-cell *matCellDef="let documento">
-              <button mat-icon-button color="primary" (click)="verDocumento(documento)" 
-                      matTooltip="Visualizar documento">
-                <mat-icon>visibility</mat-icon>
-              </button>
+              <div class="acciones-container">
+                <button mat-icon-button color="primary" (click)="verDocumento(documento)" 
+                        matTooltip="Visualizar documento">
+                  <mat-icon>visibility</mat-icon>
+                </button>
+                <button mat-icon-button color="accent" (click)="agregarComentario(documento)" 
+                        matTooltip="Añadir comentario">
+                  <mat-icon>comment</mat-icon>
+                </button>
+              </div>
             </td>
           </ng-container>
 
