--- a/src/app/shared/components/request-status/request-status.component.css
+++ b/src/app/shared/components/request-status/request-status.component.css
@@ -7,3 +7,16 @@ mat-icon {
   vertical-align: middle;
   margin-right: 4px;
 }
+
+.sin-comentarios {
+  color: #999;
+  font-style: italic;
+}
+
+button[mat-icon-button] {
+  transition: all 0.2s ease-in-out;
+}
+
+button[mat-icon-button]:hover {
+  transform: scale(1.1);
+}
