--- a/src/app/shared/components/request-status/request-status.component.html
+++ b/src/app/shared/components/request-status/request-status.component.html
@@ -31,6 +31,23 @@
     </td>
   </ng-container>
 
+  <!-- Comentarios (solo si showComentarios=true) -->
+  <ng-container *ngIf="showComentarios" matColumnDef="comentarios">
+    <th mat-header-cell *matHeaderCellDef> Comentarios </th>
+    <td mat-cell *matCellDef="let element">
+      <button *ngIf="esSolicitudRechazada(element.estado)" 
+              mat-icon-button 
+              color="accent" 
+              (click)="onVerComentarios(element.id)"
+              matTooltip="Ver comentarios de rechazo">
+        <mat-icon>comment</mat-icon>
+      </button>
+      <span *ngIf="!esSolicitudRechazada(element.estado)" class="sin-comentarios">
+        -
+      </span>
+    </td>
+  </ng-container>
+
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
