--- a/src/app/shared/components/request-status/request-status.component.html
+++ b/src/app/shared/components/request-status/request-status.component.html
@@ -48,6 +48,19 @@
     </td>
   </ng-container>
 
+  <!-- Seleccionar (solo si showSeleccionar=true) -->
+  <ng-container *ngIf="showSeleccionar" matColumnDef="seleccionar">
+    <th mat-header-cell *matHeaderCellDef> Seleccionar </th>
+    <td mat-cell *matCellDef="let element">
+      <button mat-icon-button 
+              color="primary" 
+              (click)="onSeleccionarSolicitud(element.id)"
+              matTooltip="Seleccionar solicitud">
+        <mat-icon>check_circle</mat-icon>
+      </button>
+    </td>
+  </ng-container>
+
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
